--- a/commentsdep/templates/base.html
+++ b/commentsdep/templates/base.html
@@ -94,29 +94,36 @@
                 </div>
             </div>
         </div>
-        <script src="{% static 'articles/jquery.js' %}"></script>
-        <script src="{% static 'articles/main.js' %}"></script>
-        <script>
-        var interval = 1000;
+        {% if page_obj %}
+            {% if page_obj.number == 1 and not day.salary %}
+                <script src="{% static 'articles/jquery.js' %}"></script>
+                <script src="{% static 'articles/main.js' %}"></script>
+                <script>
 
-        var el = $("#timer");
+                $(document).ready(() => {
+                    var interval = 1000;
+                    var el = $("#timer");
+                    var salary = $("#salary_counter");
 
-        function doAjax() {
-            $.ajax(
-                {
-                    url: "{% url 'articles:get-time' %}",
-                    dataType: 'json',
-                    success: function (response) {
-                        el.html(response.time);
-                        console.log(`RESPONSE ${response}`)
-                        setTimeout(doAjax, interval);
+                    function doAjax() {
+                        $.ajax(
+                            {
+                                url: "{% url 'articles:get-time' %}",
+                                dataType: 'json',
+                                success: function (response) {
+                                    el.html(response.time);
+                                    salary.html(response.salary)
+                                    console.log(`RESPONSE ${response}`)
+                                    setTimeout(doAjax, interval);
+                                }
+                            }
+                    );
+                    
                     }
-                }
-        );
-        
-        }
-        setTimeout(doAjax, interval);
-
-        </script>
+                    setTimeout(doAjax, interval);
+                })
+                </script>
+            {% endif %}
+        {% endif %}
     </body>
 </html>
