--- a/commentsdep/articles/templates/articles/article_create.html
+++ b/commentsdep/articles/templates/articles/article_create.html
@@ -11,7 +11,9 @@
     </div>
     <div class="form-group">
         <label class="form-label" for="content">Comment</label>
-        <textarea class="form-input" rows="10" name="content" id="id_content" placeholder="Textarea" rows="3"></textarea>
+        {{ form.media }}
+        {{ form.content }}
+
     </div>
     <div class="form-group">
         <label class="form-label" for="snippet">Snippet</label>
