--- a/commentsdep/templates/base.html
+++ b/commentsdep/templates/base.html
@@ -30,25 +30,25 @@
                         <li class="nav-item">
                             <a href="{% url 'articles:my-site' %}">
                                 <i class="icon icon-people"></i>
-                                Moja strona
+                                My site
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="{% url 'articles:hours' %}">
                                 <i class="icon icon-time"></i>
-                                Godziny
+                                Hours
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="{% url 'articles:finance' %}">
                                 <i class="icon icon-link"></i>
-                                Finanse
+                                Finance
                             </a>
                         </li>
                         <li class="nav-item">
                             <a href="{% url 'articles:schedule' %}">
                                 <i class="icon icon-edit"></i>
-                                Grafik
+                                Schedule
                             </a>
                         </li>
                         <li class="nav-item">
