--- a/commentsdep/articles/templates/registration/login.html
+++ b/commentsdep/articles/templates/registration/login.html
@@ -31,6 +31,11 @@
                 <p> {{ message }} </p>
             {% endfor %}
         </div>
+        <div class="container text-center">
+            This project is still work in progress.<br> To get a glimpse you can log in as:<br>
+            login: piatas<br>
+            password: piatas<br>
+        </div>
     </body>
 
 </html>
