--- a/commentsdep/articles/templates/registration/login.html
+++ b/commentsdep/articles/templates/registration/login.html
@@ -36,8 +36,9 @@
             login: piatas<br>
             password: piatas<br>
         </div>
-        <div class="container text-center">
-            App that helps managing the company. It's giving the employees the ability to punch in and out. It counts theirs hours and payment. There is also an inside forum with blacklist. It's work in progress just to show basic overview. Now I am working on schedule planner and bonus system with live ranking. Future admin panel will allow forum and schedule administration as well as well as managing the bonus system. It also helps with organizing the paychecks.
+        <br>
+        <div class="container text-center col-6 col-md-10 ">
+            App that helps managing the company. It's giving the employees the ability to punch in and out. It counts theirs hours and payment. There is also an inside forum with blacklist. It's work in progress just to show basic overview. Now I am working on schedule planner and bonus system with live ranking. Future admin panel will allow forum and schedule administration as well as managing the bonus system. It also helps with organizing the paychecks.
         </div>
     </body>
 
