last minor changes to info

--- a/commentsdep/articles/templates/registration/login.html
+++ b/commentsdep/articles/templates/registration/login.html
@@ -31,14 +31,14 @@
                 <p> {{ message }} </p>
             {% endfor %}
         </div>
-        <div class="container text-center">
+        <div class="container text-center text-justify col-6 col-sm-10">
             This project is still work in progress.<br> To get a glimpse you can log in as:<br>
             login: piatas<br>
             password: piatas<br>
         </div>
         <br>
-        <div class="container text-center col-6 col-md-10 ">
-            App that helps managing the company. It's giving the employees the ability to punch in and out. It counts theirs hours and payment. There is also an inside forum with blacklist. It's work in progress just to show basic overview. Now I am working on schedule planner and bonus system with live ranking. Future admin panel will allow forum and schedule administration as well as managing the bonus system. It also helps with organizing the paychecks.
+        <div class="container text-center text-justify col-6 col-md-10 ">
+            This app helps managing the company. It's giving the employees the ability to punch in and out. It counts theirs hours and payment. There is also an inside forum with blacklist. It's work in progress just to show basic overview. Now I am working on schedule planner and bonus system with live ranking. Future admin panel will allow forum and schedule administration as well as managing the bonus system. It also helps with organizing the paychecks.
         </div>
     </body>
 
